--- a/src/App/components/01-Header/styles/Header.css
+++ b/src/App/components/01-Header/styles/Header.css
@@ -1,17 +1,44 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+ 
 
-    font-family: "Poppins", sans-serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.img_bg_header_one {
 
+    background-image: url('https://s3.eu-central-1.amazonaws.com/commerce.sabata.almacenamiento/images/bg_header_02.jpg');
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .img_header {
 
     mask-image: linear-gradient(
-        black 80%, 
+        black 90%, 
         transparent
     );
+
+}
+
+
+.text__subrayado::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    position: absolute;
+    background-color: black;
+    bottom: 0;
+    left: 0;
+
+}
+
+.text__subrayado:hover::after  {
+    height: 2px;
+    transition: ease-in .3s; 
+
+}
+
+.text__span {
+
+    font-family: "Playfair Display", serif;
+    font-size: 10px;
 
 }
