--- a/src/Index.css
+++ b/src/Index.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+
+    font-family: "Poppins", sans-serif;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+}
