--- a/src/App/components/06-Header/style/Header_06.css
+++ b/src/App/components/06-Header/style/Header_06.css
@@ -1,5 +1,5 @@
 .img_bg_header_06 {
-    background-image: url('https://assets-global.website-files.com/6201a8e3c7f99b635572faff/640b96fd43138c146c27929d_211007000000090001.jpg');
+    background-image: url('../../../../../build/images/App/bg_footer.webp');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
