--- a/src/Register/style/style.css
+++ b/src/Register/style/style.css
@@ -12,7 +12,7 @@
 
     background-image: url('https://www.xtrafondos.com/wallpapers/selena-gomez-cr-fashion-book-photoshoot-11058.jpg');
     background-size: cover;
-    background-position: left center;
+    background-position: center center;
     background-repeat: no-repeat;
 }
 
